force-app/main/default/objects/Language_Setup__c/Language_Setup__c.object-meta.xml
<CustomObject>
    <label>Language Setup</label>
    <nameField>
        <label>Language Setup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Languages Setup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>