force-app/main/default/objects/Language_Setup__c/fields/Alternate_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Phone_Number__c</fullName>
    <inlineHelpText>Secondary TFN or DID for this phone menu.</inlineHelpText>
    <label>Alternate Phone Number</label>
    <type>Phone</type>
</CustomField>