force-app/main/default/objects/Language_Setup__c/fields/Initial_Greeting_Prompt__c.field-meta.xml
<CustomField>
    <fullName>Initial_Greeting_Prompt__c</fullName>
    <description>The initial Greeting played for the dialed number.</description>
    <inlineHelpText>The initial Greeting that will be played before the language selection menu.</inlineHelpText>
    <label>Initial Greeting Prompt</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>