force-app/main/default/objects/Language_Setup__c/fields/Primary_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Primary_Phone_Number__c</fullName>
    <description>TFN or DID for this Language Setup.</description>
    <inlineHelpText>TFN or DID for this Language Setup.</inlineHelpText>
    <label>Primary Phone Number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>