force-app/main/default/objects/Language_Setup__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Primary_Phone_Number__c</columns>
    <columns>Alternate_Phone_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>