force-app/main/default/objects/Language_Setup__c/listViews/IMNA_Languages_Setup.listView-meta.xml
<ListView>
    <fullName>IMNA_Languages_Setup</fullName>
    <columns>NAME</columns>
    <columns>Primary_Phone_Number__c</columns>
    <columns>Alternate_Phone_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>IMLA</value>
    </filters>
    <label>IMNA Languages Setup</label>
</ListView>